modify logo to prevent shifting layout when toggle header menu

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,4 +7,10 @@
 
 :root {
   --bg-primary: #dcccbc;
+  --link-active: #aa6666;
+}
+
+a:visited,
+a:active {
+  color: unset;
 }
